--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       <div class="row">
         <div class="col-xs-3"></div>
         <div class="col-xs-6">
-          <h3>Your answer here...</h3>
+          <h3>Enter a number:</h3>
+          <input type="number" id="primesTo"></input>
+          <button id="findPrimes">Find Primes</button>
+          <h3 id="results">Your answer here...</h3>
         </div>
         <div class="col-xs-3"></div>
     </div>
