--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-compatible">
     <meta name="viewport" value="width=device-width, initial-scale=1">
-    <title>Prime Shifting</title>
+    <title>Prime Sifting</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-      <h1>Prime Shifting</h1>
+    <div class="container jumbotron">
+      <h1>Prime Sifting</h1>
       <div class="row">
         <div class="col-xs-3"></div>
         <div class="col-xs-6">
           <h3>Enter a number:</h3>
+          <em>large numbers may appear to lock up your browser...<br> about 1 second per 10,000</em><br>
           <input type="number" id="primesTo"></input>
           <button id="findPrimes">Find Primes</button>
           <h3 id="results">Your answer here...</h3>
